# ai-agent-builder

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml  requirements.txt  setup.py  test_anaconda_llm.py
agent_builder/: agent.py  langchain_llm_wrapper.py  utils.py
agent_builder/components/: executor.py  memory.py  planner.py
agent_builder/llm_providers/: __init__.py  anaconda_llm.py  anthropic_llm.py  ollama_llm.py  openai_llm.py
agent_builder/tools/: __init__.py  echo_tool.py  format_response_tool.py  token_counter_tool.py
examples/: simple_agent.py
tests/: test_agent.py  test_anthropic_direct.py  test_anthropic_llm.py
